pgrx-tests/tests/ui/elog/argument-order/detail_first.stderr
error: The alternative invocation requires `message` to be specified first.
  --> tests/ui/elog/argument-order/detail_first.rs:7:5
   |
7  | /     log!(
8  | |         detail = "detail";
9  | |         message = "...";
10 | |     );
   | |_____^
   |
   = note: this error originates in the macro `log` (in Nightly builds, run with -Z macro-backtrace for more info)
